--- a/docs/carmore-icon/icons/country-flag-at.mdx
+++ b/docs/carmore-icon/icons/country-flag-at.mdx
@@ -1,6 +1,6 @@
 ---
-id: country-flag-ae
-title: CountryFlagAE
+id: country-flag-at
+title: CountryFlagAT
 ---
 
 import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
@@ -8,11 +8,11 @@ import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
 import A11yCompareList from '@site/src/organisms/carmore-icon/A11yCompareList';
 import SizeCompareList from '@site/src/organisms/carmore-icon/SizeCompareList';
 
-# CountryFlagAE
+# CountryFlagAT
 
 <br />
 
-<IconProfile icon={'country-flag-ae'} />
+<IconProfile icon={'country-flag-at'} />
 
 ## 사용법
 
@@ -21,7 +21,7 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 
 // ...
 
-  <CarmoreIcon icon={'country-flag-ae'} ... />
+  <CarmoreIcon icon={'country-flag-at'} ... />
 
 // ...
 ```
@@ -38,13 +38,13 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 - `width` 의 기본값은 '1.5rem' 입니다.
 - `height` 의 기본값은 '1.5rem' 입니다.
 
-<SizeCompareList icon={'country-flag-ae'} sizes={['1.5rem', 30, '48px', '5rem']} />
+<SizeCompareList icon={'country-flag-at'} sizes={['1.5rem', 30, '48px', '5rem']} />
 
 ```tsx
-<CarmoreIcon icon={'country-flag-ae'} ... /> // 기본값('1.5rem') 적용
-<CarmoreIcon icon={'country-flag-ae'} width={30} height={30} ... />
-<CarmoreIcon icon={'country-flag-ae'} width={'48px'} height={'48px'} ... />
-<CarmoreIcon icon={'country-flag-ae'} width={'5rem'} height={'5rem'} ... />
+<CarmoreIcon icon={'country-flag-at'} ... /> // 기본값('1.5rem') 적용
+<CarmoreIcon icon={'country-flag-at'} width={30} height={30} ... />
+<CarmoreIcon icon={'country-flag-at'} width={'48px'} height={'48px'} ... />
+<CarmoreIcon icon={'country-flag-at'} width={'5rem'} height={'5rem'} ... />
 ```
 
 <br />
@@ -64,13 +64,13 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 `role`, `aria-label` 등의 속성을 설정하는 것을 권장합니다.
 
 - `role` 의 기본값은 'img' 입니다.
-- `aria-label` 의 기본값은 '아랍에미리트' 입니다.
+- `aria-label` 의 기본값은 '오스트리아' 입니다.
 - 기본 접근성 속성이 적용되어 있지만, 필요에 따라 커스터마이징할 수 있습니다.
 - _(아이콘에 마우스를 올려보세요.)_
 
-<A11yCompareList icon={'country-flag-ae'} ariaLabels={[undefined, '국기']} />
+<A11yCompareList icon={'country-flag-at'} ariaLabels={[undefined, '국기']} />
 
 ```tsx
-<CarmoreIcon icon={'country-flag-ae'} ... /> // 기본값('아랍에미리트') 적용
-<CarmoreIcon icon={'country-flag-ae'} aria-label={'국기'} ... />
+<CarmoreIcon icon={'country-flag-at'} ... /> // 기본값('오스트리아') 적용
+<CarmoreIcon icon={'country-flag-at'} aria-label={'국기'} ... />
 ```
