FEAT: carmore-icon > overview 아이콘 배경 alpha값 추가
#f8f8f8 -> #f8f8f81a

--- a/docs/carmore-icon/icons/loading-spinner.mdx
+++ b/docs/carmore-icon/icons/loading-spinner.mdx
@@ -80,12 +80,12 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 ```css
 .loading-spinner-icon-1 {
   ...
-  --carmore-icon-loading-spinner-background: primary;
+  --carmore-icon-loading-spinner-background: blue;
 }
 
 .loading-spinner-icon-2 {
   ...
-  --carmore-icon-loading-spinner-foreground: primary;
+  --carmore-icon-loading-spinner-foreground: blue;
 }
 ```
 
