--- a/i18n/en/docusaurus-plugin-content-docs/current/carmore-icon/icons/loading-spinner.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/carmore-icon/icons/loading-spinner.mdx
@@ -80,12 +80,12 @@ Use the CSS variables below to adjust the icon colors.
 ```css
 .loading-spinner-icon-1 {
   ...
-  --carmore-icon-loading-spinner-background: primary;
+  --carmore-icon-loading-spinner-background: blue;
 }
 
 .loading-spinner-icon-2 {
   ...
-  --carmore-icon-loading-spinner-foreground: primary;
+  --carmore-icon-loading-spinner-foreground: blue;
 }
 ```
 
