--- a/docs/carmore-icon/icons/arrow-up.mdx
+++ b/docs/carmore-icon/icons/arrow-up.mdx
@@ -95,7 +95,7 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 `role`, `aria-label` 등의 속성을 설정하는 것을 권장합니다.
 
 - `role` 의 기본값은 'img' 입니다.
-- `aria-label` 의 기본값은 '더 아래로' 입니다.
+- `aria-label` 의 기본값은 '위로' 입니다.
 - 기본 접근성 속성이 적용되어 있지만, 필요에 따라 커스터마이징할 수 있습니다.
 - _(아이콘에 마우스를 올려보세요.)_
 
