--- a/i18n/en/docusaurus-plugin-content-docs/current/carmore-icon/icons/arrow-double-down.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/carmore-icon/icons/arrow-double-down.mdx
@@ -42,7 +42,7 @@ You can control the icon size with the `width` and `height` props.
 <SizePropsCompareList icon={'arrow-double-down'} sizes={['1.5rem', 30, '48px', '5rem']} />
 
 ```tsx
-<CarmoreIcon icon={'arrow-double-down'} ... /> // Uses the default ('더 아래로')
+<CarmoreIcon icon={'arrow-double-down'} ... /> // Uses the default ('1.5rem')
 <CarmoreIcon icon={'arrow-double-down'} width={30} height={30} ... />
 <CarmoreIcon icon={'arrow-double-down'} width={'48px'} height={'48px'} ... />
 <CarmoreIcon icon={'arrow-double-down'} width={'5rem'} height={'5rem'} ... />
