FEAT: carmore-icon > global > 수정이력 작성

--- a/i18n/en/docusaurus-plugin-content-docs/current/carmore-icon/icons/global.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/carmore-icon/icons/global.mdx
@@ -3,11 +3,13 @@ id: global
 title: Global
 ---
 
+import UpdateLog from '@site/src/molecules/common/UpdateLog';
 import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
 
 import A11yPropsCompareList from '@site/src/organisms/carmore-icon/A11yPropsCompareList';
 import ColorPropsCompareList from '@site/src/organisms/carmore-icon/ColorPropsCompareList';
 import SizePropsCompareList from '@site/src/organisms/carmore-icon/SizePropsCompareList';
+import { version } from 'react';
 
 # Global
 
@@ -30,19 +32,19 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 <br />
 <br />
 
-## Control size
+## Size
 
-You can control the icon size with the `width` and `height` props.
+Adjust the icon size with the `width` and `height` props.
 
-- Pass numbers directly, or strings with units such as 'px', 'rem', or '%'.
-  - (The icon keeps its intrinsic aspect ratio and cannot be stretched.)
+- Pass numbers directly, or strings that include units such as 'px', 'rem', or '%'.
+  - (The original aspect ratio is fixed and cannot be changed.)
 - The default `width` is '1.5rem'.
 - The default `height` is '1.5rem'.
 
 <SizePropsCompareList icon={'global'} sizes={['1.5rem', 30, '48px', '5rem']} />
 
 ```tsx
-<CarmoreIcon icon={'global'} ... /> // Uses the default ('전세계')
+<CarmoreIcon icon={'global'} ... /> // Uses the default ('1.5rem')
 <CarmoreIcon icon={'global'} width={30} height={30} ... />
 <CarmoreIcon icon={'global'} width={'48px'} height={'48px'} ... />
 <CarmoreIcon icon={'global'} width={'5rem'} height={'5rem'} ... />
@@ -51,9 +53,9 @@ You can control the icon size with the `width` and `height` props.
 <br />
 <br />
 
-## Change color
+## Color
 
-Set the text color via the `className` prop to recolor the icon.
+Set `className` with a text color to change the icon color.
 
 <ColorPropsCompareList icon={'global'} colors={['red', 'orange', 'green', 'blue', 'purple']} />
 
@@ -92,17 +94,31 @@ Set the text color via the `className` prop to recolor the icon.
 
 ## Accessibility (a11y)
 
-We recommend setting accessibility attributes such as `role` and `aria-label`.
+Set attributes such as `role` and `aria-label` for better accessibility.
 
 - The default `role` is 'img'.
-- The default `aria-label` is '전세계'.
-- Accessibility defaults are provided, and you can customize them as needed.
-- _(Hover the icon to see the tooltip.)_
+- The default `aria-label` is '글로벌'.
+- Default accessibility props are provided, and you can customize them as needed.
+- _(Hover over the icon.)_
 
 <A11yPropsCompareList icon={'global'} ariaLabels={[undefined, 'Global', 'Internet']} />
 
 ```tsx
-<CarmoreIcon icon={'global'} ... /> // Uses the default ('전세계')
+<CarmoreIcon icon={'global'} ... /> // Uses the default ('글로벌')
 <CarmoreIcon icon={'global'} aria-label={'Global'} ... />
 <CarmoreIcon icon={'global'} aria-label={'Internet'} ... />
 ```
+
+<br />
+<br />
+
+## Update Log
+
+<UpdateLog
+  logList={[
+    {
+      version: '1.3.0',
+      content: 'Adjusted the default aria-label from "전세계" to "글로벌".',
+    },
+  ]}
+/>
