--- a/docs/carmore-icon/icons/global.mdx
+++ b/docs/carmore-icon/icons/global.mdx
@@ -3,11 +3,13 @@ id: global
 title: Global
 ---
 
+import UpdateLog from '@site/src/molecules/common/UpdateLog';
 import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
 
 import A11yPropsCompareList from '@site/src/organisms/carmore-icon/A11yPropsCompareList';
 import ColorPropsCompareList from '@site/src/organisms/carmore-icon/ColorPropsCompareList';
 import SizePropsCompareList from '@site/src/organisms/carmore-icon/SizePropsCompareList';
+import { version } from 'react';
 
 # Global
 
@@ -95,14 +97,28 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 `role`, `aria-label` 등의 속성을 설정하는 것을 권장합니다.
 
 - `role` 의 기본값은 'img' 입니다.
-- `aria-label` 의 기본값은 '전세계' 입니다.
+- `aria-label` 의 기본값은 '글로벌' 입니다.
 - 기본 접근성 속성이 적용되어 있지만, 필요에 따라 커스터마이징할 수 있습니다.
 - _(아이콘에 마우스를 올려보세요.)_
 
 <A11yPropsCompareList icon={'global'} ariaLabels={[undefined, '글로벌', '인터넷']} />
 
 ```tsx
-<CarmoreIcon icon={'global'} ... /> // 기본값('전세계') 적용
+<CarmoreIcon icon={'global'} ... /> // 기본값('글로벌') 적용
 <CarmoreIcon icon={'global'} aria-label={'글로벌'} ... />
 <CarmoreIcon icon={'global'} aria-label={'인터넷'} ... />
 ```
+
+<br />
+<br />
+
+## 수정 이력
+
+<UpdateLog
+  logList={[
+    {
+      version: '1.3.0',
+      content: 'aira-label 속성 기본값을 "전세계"에서 "글로벌"로 수정.',
+    },
+  ]}
+/>
